- Alias PIX image encoder and decoder
- BRender PIX image decoder
- Amazing Studio PAF playback support
- XBM decoder
- bmp standalone parser
- OpenEXR image decoder
- support encoding and decoding 4-channel SGI images
- support decoding 16-bit RLE SGI images
- VP7 video decoder
- LucasArts SMUSH SANM video decoder
- LucasArts SMUSH VIMA audio decoder (ADPCM)
- LucasArts SMUSH demuxer


version 10:
- av_strnstr
- support ID3v2 tags in ASF files
- reference-counting for AVFrame and AVPacket data
- avconv now fails when input options are used for output file
  or vice versa
- avconv options -filter_script and -filter_complex_script, which allow a
  filtergraph description to be read from a file
- uniform options syntax across all filters
- interlace filter
- JPEG 2000 decoder
- asetpts filter (same as setpts, but for audio)
- trim and atrim filters
- avconv -t and -ss (output-only) options are now sample-accurate when
  transcoding audio
- Matroska muxer can now put the index at the beginning of the file.
- avconv -deinterlace option removed, the yadif filter should be used instead
- Apple Intermediate Codec decoder
- Escape 130 video decoder
- support for slice multithreading in libavfilter
- VC-1 interlaced B-frame support
- support for WavPack muxing (raw and in Matroska)
- Go2Webinar decoder
- WavPack encoding through libwavpack
- Added the -n parameter to avconv
- RTMP seek support
- when transcoding with avconv (i.e. not streamcopying), -ss is now accurate
  even when used as an input option. Previous behavior can be restored with
  the -noaccurate_seek option.
- avconv -t option can now be used for inputs, to limit the duration of
  data read from an input file
- Voxware MetaSound decoder
- WebP decoder
- Error Resilient AAC syntax (ER AAC LC) decoding
- Low Delay AAC (ER AAC LD) decoding
- mux chapters in ASF files
- Opus in Ogg demuxing
- Enhanced Low Delay AAC (ER AAC ELD) decoding (no LD SBR support)
- F4V muxer
- HNM version 4 demuxer and video decoder